# rust-crud-api

./: .env.dev  .gitignore  Cargo.toml  README.md
.sqlx/: query-220beaa3eb440cac34825e073d8fe3cf285373fec79ef1919a9440a0e235988c.json  query-36353a552a8c213f3d284f5c51bfa7c9e4b59553194d7421dcb651ed444ec940.json  query-3f86fc4cd3a6c2222c03ff8cfc43c6da7aae9b565a224c8aadec2743776d8ab2.json  query-58327aa90726e98d2f31a5178c611b22b3177ea71f812c9f53e4164f22cd1f8a.json  query-febc606beec3ad5d91234245fc21666addac6508179b9560ee1d2ff74024490f.json
src/: db.rs  main.rs
src/handlers/: user.rs
src/models/: user.rs
src/routes/: mod.rs  user.rs
