[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"          # web framework
tokio = { version = "1", features = ["full"] }  # async runtime
serde = { version = "1.0", features = ["derive"] }  # serialization/deserialization
serde_json = "1.0"       # สำหรับ JSON
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros"] }  # PostgreSQL
dotenvy = "0.15"         # อ่าน .env